# arcanoid

./: .gitignore  CMakeLists.txt  conanfile.txt  prep.bat  prep_release.bat
res/: ball.frag  ball.vert  basic.frag  box.frag
res/shaders/: basic.vert  box.vert
src/: audio.cpp  audio.h  glad.cpp  main.cpp
src/glad/: glad.h
